--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-streamlit==1.41.1
-pandas==2.2.3
-mlxtend==0.23.3
-yfinance==0.2.22
+streamlit==1.25.0
+pandas==2.1.1
+textblob==0.17.1
 matplotlib==3.8.0
-scikit-learn==1.0.2
-numpy==1.21.0
+scikit-learn==1.3.1
+seaborn==0.13.0
+joblib==1.3.2
+numpy==1.26.0
+mlxtend==0.22.0
+yfinance==0.2.28
