--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ joblib==1.3.2
 numpy==1.26.0
 mlxtend==0.22.0
 yfinance==0.2.28
-scikit-learn>=1.1.0
+scikit-learn>=1.0.2,<=1.3.1
 seaborn==0.11.2
+pillow==9.5.0
