--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-streamlit==1.25.0
-pandas==2.1.1
-textblob==0.17.1
-matplotlib==3.8.0
-joblib==1.3.2
-numpy==1.26.0
-mlxtend==0.22.0
-yfinance==0.2.28
-scikit-learn>=1.0.2,<=1.3.1
-seaborn==0.11.2
-pillow>=7.1.0,<10
+streamlit==1.41.0
+pandas==2.2.2
+textblob==0.18.0
+matplotlib==3.8.3
+joblib==1.4.2
+numpy==1.26.4
+mlxtend==0.23.3
+yfinance==0.2.51
+scikit-learn==1.5.2
+seaborn==0.13.2
+pillow==11.0.
