Update requirements.txt with additional libraries

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
-streamlit==1.41.0
-pandas==2.2.2
-textblob==0.18.0
-matplotlib==3.8.3
-joblib==1.4.2
-numpy==1.26.4
-mlxtend==0.23.3
-yfinance==0.2.51
-scikit-learn==1.5.2
-seaborn==0.13.2
-pillow==11.0.0
+streamlit
+pandas
+numpy
+matplotlib
+seaborn
+mlxtend
+scikit-learn
+graphviz
+joblib
+librosa
+soundfile
+textblob
+wordcloud
+yfinance
+plotly
